probando con mongo 2

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://sales:<MongoGsc2022!>@formsubmissions.qa1w7.mongodb.net/?retryWrites=true&w=majority&appName=FormSubmissions
+MONGODB_URI=mongodb+srv://sales:MongoGsc2022@formsubmissions.qa1w7.mongodb.net/?retryWrites=true&w=majority&appName=FormSubmissions
